# mc-manager

./: .env.example  .gitignore  README.md  pyproject.toml
mc_manager/: __main__.py  activity_parser.py  blacklist.py  cli.py  log_parser.py  sftp.py  stats.py
