[project]
name = "mc-manager"
version = "0.1.0"
description = "Minecraft server log checker and ban manager via SFTP"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mc-manager = "mc_manager.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
